# cortexcode

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COOKBOOK.md  LICENSE  README.md  SETUP_CURSOR.md  pyproject.toml
.github/workflows/: index.yml  release.yml
cortexcode/: __init__.py  advanced_analysis.py  advanced_analysis_endpoints.py  analysis.py  analysis_dead_code.py  cli.py  cli_ai_docs.py  cli_complexity.py  cli_dead_code.py  cli_diagrams.py  cli_diff.py  cli_docs.py  cli_explain.py  cli_impact.py  cli_servers.py  cli_stats.py  cli_support.py  cli_watch.py  config.py  context.py  context_format.py  context_tokens.py  dashboard.py  docs.py  git_diff.py  indexer.py  lsp_server.py  main.py  mcp_registry.py  mcp_server.py  mcp_tool_handlers.py  mcp_transport.py  performance.py  performance_index_storage.py  performance_preview.py  plugins.py  semantic_search.py  vuln_scan.py  watcher.py  workspace.py
cortexcode-vscode/: .vscodeignore  README.md  bump-version.ps1  cortexcode-0.4.0.vsix  cortexcode-0.5.0.vsix  cortexcode-0.6.0.vsix  package-lock.json  package.json  tsconfig.json
cortexcode-vscode/src/: extension.js  extension.ts
cortexcode/advanced_analysis/: __init__.py  advanced_analysis.py  advanced_analysis_cycles.py  advanced_analysis_docs.py  advanced_analysis_duplicates.py  advanced_analysis_search.py  advanced_analysis_security.py
cortexcode/ai_docs/: __init__.py  config.py  doc_cache.py  doc_generator.py  doc_lookup.py  doc_models.py  explainer.py  llm_client.py  page_generator.py  prompts.py  report_runner.py
cortexcode/analysis/: __init__.py  analysis_complexity.py  analysis_impact.py
cortexcode/cli/: __init__.py  cli_bundle.py  cli_config.py  cli_context.py  cli_dashboard.py  cli_find.py  cli_githook.py  cli_index.py  cli_jobs.py  cli_package.py  cli_report.py  cli_scan.py  cli_search.py  cli_servers.py  cli_shell.py  cli_trace.py  cli_wiki.py  cli_workspace.py
cortexcode/context/: __init__.py  context_query.py  context_tokens.py
cortexcode/diagrams/: __init__.py  architecture.py  call_graph.py  class_diagram.py  dependencies.py  directory_tree.py  entities.py  file_tree.py  imports.py  save.py  sequence.py  state.py  utils.py
cortexcode/docs/: __init__.py  diagrams.py  generator.py  html_generators.py  javascript.py  javascript_sections.py  templates.py
cortexcode/indexing/: __init__.py  build.py  calls.py  config.py  defaults.py  dispatch.py  nodes.py  (+20 more)
website/: package-lock.json  package.json
(+56 files in other folders)
